--- a/index.html
+++ b/index.html
@@ -62,6 +62,16 @@
             <div>
                 <h2 class="header-primary">Work Experience</h2>
                 <h3 class="job-name">
+                    Vice President - Pharma Partner Medme Moja Apteka — 2023 - present
+                </h3>
+                <p class="description">xxxxx
+                </p>
+                <h3 class="job-name">
+                    Head of sales in the pharmacy market - Pharma Partner Medme Moja Apteka — 2021 - 2023
+                </h3>
+                <p class="description">xxx
+                </p>
+                <h3 class="job-name">
                     Chief Operational and Development Officer - Urtica Sp. z o.o.— 2021 - 2022
                 </h3>
                 <p class="description">Restructured two companies and built innovational structure responsible for IT,
