--- a/index.html
+++ b/index.html
@@ -36,9 +36,7 @@
             </div>
             <div>
                 <h2 class="header-primary">Key skills</h2>
-                <!-- <h3 class="job-name">
-        Key skills
-    </h3> -->
+               
                 <p class="description">Agile Organization Leader.<br>
                     Twenty years off’ experience in sales management and product and services development in financial
                     sector in
@@ -67,7 +65,7 @@
                 <p class="description">xxxxx
                 </p>
                 <h3 class="job-name">
-                    Head of sales in the pharmacy market - Pharma Partner Medme Moja Apteka — 2021 - 2023
+                    Head of Sales - Pharma Partner Medme Moja Apteka — 2021 - 2023
                 </h3>
                 <p class="description">xxx
                 </p>
