add description in work exp

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             </div>
             <div>
                 <h2 class="header-primary">Key skills</h2>
-               
+
                 <p class="description">Agile Organization Leader.<br>
                     Twenty years off’ experience in sales management and product and services development in financial
                     sector in
@@ -62,12 +62,22 @@
                 <h3 class="job-name">
                     Vice President - Pharma Partner Medme Moja Apteka — 2023 - present
                 </h3>
-                <p class="description">xxxxx
+                <p class="description">Leading the strategic development of the application and platform supporting pharmacies and pharmacy partners. I was
+                responsible for innovation in the area of e-pharmacy, development of the pharmacist panel, article guide and online
+                store. My mission was not only to provide the highest quality service to our customers, but also to create new standards
+                in the pharmaceutical industry. During my tenure, we managed to achieve a significant increase in the number of users of
+                the platform and increase customer loyalty, which contributed to strengthening our company's position in the e-pharmacy
+                market.
                 </p>
                 <h3 class="job-name">
                     Head of Sales - Pharma Partner Medme Moja Apteka — 2021 - 2023
                 </h3>
-                <p class="description">xxx
+                <p class="description">Leading the strategic development of stratup sales department and application dedicated to pharmaceutical partners and
+                pharmacies. I was responsible for effectively building relationships with key customers, managing the budget and
+                achieving the set sales goals. My mission was not only to increase sales and market share, but also to improve the
+                solutions offered and adapt them to changing customer needs. During my tenure, we managed to achieve a significant
+                increase in sales and customer satisfaction, which contributed to strengthening our company's position in the
+                pharmaceutical market.
                 </p>
                 <h3 class="job-name">
                     Chief Operational and Development Officer - Urtica Sp. z o.o.— 2021 - 2022
