--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
             <div>
                 <h2 class="header-primary">Key skills</h2>
 
-                <p class="description">Agile Organization Leader.<br>
-                    Twenty years off’ experience in sales management and product and services development in financial
+                <p class="description key-skills">Agile Organization Leader.<br>
+                    Twenty years off experience in sales management and product and services development in financial
                     sector in
                     traditional and digital sales channels.<br>
                     Experience in building and execution of consumer finance products ,combain with knowledge of
@@ -104,11 +104,11 @@
                     and digital sales channels, including the development of the offer and marketing in the area of
                     e-commerce
                     Built a network of dozens thousands of business partners and maintain excellent B2B relations
-                    (increase from 20 th. in
-                    2006 up to almost 30 th. 2021)
-                    Gain for Santander Consumer Bank first position on hire purchase market and continue growing (from
-                    third position in
-                    2006), currently 54% market share
+                    <!-- (increase from 20 th. in
+                    2006 up to almost 30 th. 2021) -->
+                    Gain for Santander Consumer Bank first position on hire purchase market and continue growing 
+                    <!-- (from third position in 2006),  -->
+                    currently 54% market share
                     Realization and often exceed of sales budgets given cost levels
                     Effective development of IT systems in hire purchase area, implementation of product and price
                     strategies
