fix work experience

--- a/index.html
+++ b/index.html
@@ -59,19 +59,21 @@
 
             <div>
                 <h2 class="header-primary">Work Experience</h2>
+                <h3 class="job-name">Pelion S.A. - 2021 - present</h3>
                 <h3 class="job-name">
                     Vice President - Pharma Partner Medme Moja Apteka — 2023 - present
-                </h3>
-                <p class="description">Leading the strategic development of the application and platform supporting pharmacies and pharmacy partners. I was
+                <br>
+                Head of Sales - Pharma Partner Medme Moja Apteka — 2021 - 2023
+            <br>
+                Chief Operational and Development Officer - Urtica Sp. z o.o.— 2021 - 2022
+            </h3><p class="description">Leading the strategic development of the application and platform supporting pharmacies and pharmacy partners. I was
                 responsible for innovation in the area of e-pharmacy, development of the pharmacist panel, article guide and online
                 store. My mission was not only to provide the highest quality service to our customers, but also to create new standards
                 in the pharmaceutical industry. During my tenure, we managed to achieve a significant increase in the number of users of
                 the platform and increase customer loyalty, which contributed to strengthening our company's position in the e-pharmacy
                 market.
                 </p>
-                <h3 class="job-name">
-                    Head of Sales - Pharma Partner Medme Moja Apteka — 2021 - 2023
-                </h3>
+                
                 <p class="description">Leading the strategic development of stratup sales department and application dedicated to pharmaceutical partners and
                 pharmacies. I was responsible for effectively building relationships with key customers, managing the budget and
                 achieving the set sales goals. My mission was not only to increase sales and market share, but also to improve the
@@ -79,9 +81,7 @@
                 increase in sales and customer satisfaction, which contributed to strengthening our company's position in the
                 pharmaceutical market.
                 </p>
-                <h3 class="job-name">
-                    Chief Operational and Development Officer - Urtica Sp. z o.o.— 2021 - 2022
-                </h3>
+                
                 <p class="description">Restructured two companies and built innovational structure responsible for IT,
                     Business Intelligence, Development and
                     Innovation as well as Marketing.
@@ -89,12 +89,12 @@
                 </p>
             </div>
             <div>
-
+<h3 class="job-name">Santander Consumer Bank S.A. - 2006 -
+2021</h3>
                 <h3 class="job-name">
                     Deputy Director of the Consumer Credit Division (2019 – 2021)<br> Director of the Department of
                     Consumer Products and Sales
-                    Director of the Installment Sales Department (2008 – 2019) - Santander Consumer Bank S.A. - 2006 -
-                    2021
+                    Director of the Installment Sales Department (2008 – 2019) 
                 </h3>
                 <p class="description">Remodeling the structure of the unit towards teams operating in agile mode and
                     achieving high efficiency, innovation
