--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <h2 class="header-primary">Work Experience</h2>
                 <h3 class="job-name">Pelion S.A. - 2021 - present</h3>
                 <h3 class="job-name">
-                    Vice President - Pharma Partner Medme Moja Apteka — 2023 - present
+                    Vice President - Pharma Partner Medme Moja Apteka — 2023 
                 <br>
                 Head of Sales - Pharma Partner Medme Moja Apteka — 2021 - 2023
             <br>
