--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
 
                 <a class="contact-links" href="mailto:maciej.kociemski@gmail.com">agnieszka.kociemska@gmail.com</a>
 
-                <a class="contact-links" href="https://linkedin.com/in/agnieszkakociemska" target="_blank">LinkedIn
+                <a class="contact-links" href="https://linkedin.com/in/agnieszkakociemska" target="_blank">linkedin.com/in/agnieszkakociemska
                 </a>
 
 
