--- a/pl-index.html
+++ b/pl-index.html
@@ -57,7 +57,7 @@
                 <h2 class="header-primary">Work Experience</h2>
                 <h3 class="job-name">Pelion S.A. - 2021 - present</h3>
                 <h3 class="job-name">
-                    Wiceprezes - Pharma Partner Medme Moja Apteka — 2023 - obecnie
+                    Wiceprezes - Pharma Partner Medme Moja Apteka — 2023
                 
 
                <br>
@@ -201,7 +201,7 @@
 
                 <a class="contact-links" href="mailto:maciej.kociemski@gmail.com">agnieszka.kociemska@gmail.com</a>
 
-                <a class="contact-links" href="https://linkedin.com/in/agnieszkakociemska" target="_blank">LinkedIn
+                <a class="contact-links" href="https://linkedin.com/in/agnieszkakociemska" target="_blank">linkedin.com/in/agnieszkakociemska
                 </a>
 
 
