--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
 
             <div>
                 <h2 class="header-primary">Work Experience</h2>
-                <h3 class="job-name">Pelion S.A. - 2021 - present</h3>
+                <div class="workicon"><img src="pelion.png" alt="logo pelion">
+                <h3 class="job-name workicon">Pelion S.A. - 2021 - present</h3></div>
                 <h3 class="job-name">
                     Vice President - Pharma Partner Medme Moja Apteka — 2023 
                 <br>
@@ -88,9 +89,9 @@
                 </p>
                 </p>
             </div>
-            <div>
+            <div><div class="workicon"><img src="stndr.png" alt="logo pelion">
 <h3 class="job-name">Santander Consumer Bank S.A. - 2006 -
-2021</h3>
+2021</h3></div>
                 <h3 class="job-name">
                     Deputy Director of the Consumer Credit Division (2019 – 2021)<br> Director of the Department of
                     Consumer Products and Sales
