add correct in work experience

--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
 
             <div>
                 <h2 class="header-primary">Work Experience</h2>
-                <div class="workicon"><img src="pelion.png" alt="logo pelion">
+                <div class="workicon"><img src="pelion2.png" alt="logo pelion" width="50" height="50">
                 <h3 class="job-name workicon">Pelion S.A. - 2021 - present</h3></div>
                 <h3 class="job-name">
-                    Vice President - Pharma Partner Medme Moja Apteka — 2023 
+                    Vice President of the Board — 2023 
                 <br>
                 Head of Sales - Pharma Partner Medme Moja Apteka — 2021 - 2023
             <br>
@@ -89,9 +89,12 @@
                 </p>
                 </p>
             </div>
-            <div><div class="workicon"><img src="stndr.png" alt="logo pelion">
-<h3 class="job-name">Santander Consumer Bank S.A. - 2006 -
-2021</h3></div>
+            <div>
+                <div class="workicon"><img src="stndr.png" alt="logo pelion">
+<h3 class="job-name workicon">
+    Santander Consumer Bank S.A. - 2006 - 2021
+</h3>
+</div>
                 <h3 class="job-name">
                     Deputy Director of the Consumer Credit Division (2019 – 2021)<br> Director of the Department of
                     Consumer Products and Sales
@@ -156,19 +159,19 @@
                     .</p>
             </div>
             <div>
-
+<div class="workicon"><img src="neonet.png" alt="logo pelion" width="50" height="50">
                 <h3 class="job-name">
                     Sales Execitive, Hire Purchase - Neonet S.A. — 2003 - 2006
-                </h3>
+                </h3></div>
                 <p class="description">Deputy Sales Director (2003-2004 PIGO, Olsztyn)
                     .</p>
             </div>
 
             <div>
-
+<div class="workicon"><img src="zagiel.png" alt="logo pelion" width="50" height="50">
                 <h3 class="job-name">
                     Regional Hire Purchase Director - Żagiel S.A. — 1999 - 2002
-                </h3>
+                </h3></div>
 
                 <p class="description">SKK Kredyt S.A., taken-over by Żagiel in 2002</p>
             </div>
