in english version add borderline

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 </p>
             </div>
 
-            <div>
+            <div><p href="" class="borderline"></p>
                 <h2 class="header-primary">Work Experience</h2>
                 <div class="workicon"><img src="pelion2.png" alt="logo pelion" width="50" height="50">
                 <h3 class="job-name workicon">Pelion S.A. - 2021 - present</h3></div>
