--- a/index.html
+++ b/index.html
@@ -57,32 +57,45 @@
                 </p>
             </div>
 
-            <div><p href="" class="borderline"></p>
+            <div>
+                <p href="" class="borderline"></p>
                 <h2 class="header-primary">Work Experience</h2>
                 <div class="workicon"><img src="pelion2.png" alt="logo pelion" width="50" height="50">
-                <h3 class="job-name workicon">Pelion S.A. - 2021 - present</h3></div>
+                    <h3 class="job-name workicon">Pelion S.A. - 2021 - present</h3>
+                </div>
                 <h3 class="job-name">
-                    Vice President of the Board — 2023 
-                <br>
-                Head of Sales - Pharma Partner Medme Moja Apteka — 2021 - 2023
-            <br>
-                Chief Operational and Development Officer - Urtica Sp. z o.o.— 2021 - 2022
-            </h3><p class="description">Leading the strategic development of the application and platform supporting pharmacies and pharmacy partners. I was
-                responsible for innovation in the area of e-pharmacy, development of the pharmacist panel, article guide and online
-                store. My mission was not only to provide the highest quality service to our customers, but also to create new standards
-                in the pharmaceutical industry. During my tenure, we managed to achieve a significant increase in the number of users of
-                the platform and increase customer loyalty, which contributed to strengthening our company's position in the e-pharmacy
-                market.
+                    Vice President of the Board — 2023
+                    <br>
+                    Head of Sales - Pharma Partner Medme Moja Apteka — 2021 - 2023
+                    <br>
+                    Chief Operational and Development Officer - Urtica Sp. z o.o.— 2021 - 2022
+                </h3>
+                <p class="description">Leading the strategic development of the application and platform supporting
+                    pharmacies and pharmacy partners. I was
+                    responsible for innovation in the area of e-pharmacy, development of the pharmacist panel, article
+                    guide and online
+                    store. My mission was not only to provide the highest quality service to our customers, but also to
+                    create new standards
+                    in the pharmaceutical industry. During my tenure, we managed to achieve a significant increase in
+                    the number of users of
+                    the platform and increase customer loyalty, which contributed to strengthening our company's
+                    position in the e-pharmacy
+                    market.
                 </p>
-                
-                <p class="description">Leading the strategic development of stratup sales department and application dedicated to pharmaceutical partners and
-                pharmacies. I was responsible for effectively building relationships with key customers, managing the budget and
-                achieving the set sales goals. My mission was not only to increase sales and market share, but also to improve the
-                solutions offered and adapt them to changing customer needs. During my tenure, we managed to achieve a significant
-                increase in sales and customer satisfaction, which contributed to strengthening our company's position in the
-                pharmaceutical market.
+
+                <p class="description">Leading the strategic development of stratup sales department and application
+                    dedicated to pharmaceutical partners and
+                    pharmacies. I was responsible for effectively building relationships with key customers, managing
+                    the budget and
+                    achieving the set sales goals. My mission was not only to increase sales and market share, but also
+                    to improve the
+                    solutions offered and adapt them to changing customer needs. During my tenure, we managed to achieve
+                    a significant
+                    increase in sales and customer satisfaction, which contributed to strengthening our company's
+                    position in the
+                    pharmaceutical market.
                 </p>
-                
+
                 <p class="description">Restructured two companies and built innovational structure responsible for IT,
                     Business Intelligence, Development and
                     Innovation as well as Marketing.
@@ -91,14 +104,14 @@
             </div>
             <div>
                 <div class="workicon"><img src="stndr.png" alt="logo pelion">
-<h3 class="job-name workicon">
-    Santander Consumer Bank S.A. - 2006 - 2021
-</h3>
-</div>
+                    <h3 class="job-name workicon">
+                        Santander Consumer Bank S.A. - 2006 - 2021
+                    </h3>
+                </div>
                 <h3 class="job-name">
                     Deputy Director of the Consumer Credit Division (2019 – 2021)<br> Director of the Department of
                     Consumer Products and Sales
-                    Director of the Installment Sales Department (2008 – 2019) 
+                    Director of the Installment Sales Department (2008 – 2019)
                 </h3>
                 <p class="description">Remodeling the structure of the unit towards teams operating in agile mode and
                     achieving high efficiency, innovation
@@ -110,7 +123,7 @@
                     Built a network of dozens thousands of business partners and maintain excellent B2B relations
                     <!-- (increase from 20 th. in
                     2006 up to almost 30 th. 2021) -->
-                    Gain for Santander Consumer Bank first position on hire purchase market and continue growing 
+                    Gain for Santander Consumer Bank first position on hire purchase market and continue growing
                     <!-- (from third position in 2006),  -->
                     currently 54% market share
                     Realization and often exceed of sales budgets given cost levels
@@ -159,19 +172,21 @@
                     .</p>
             </div>
             <div>
-<div class="workicon"><img src="neonet.png" alt="logo pelion" width="50" height="50">
-                <h3 class="job-name">
-                    Sales Execitive, Hire Purchase - Neonet S.A. — 2003 - 2006
-                </h3></div>
+                <div class="workicon"><img src="neonet.png" alt="logo pelion" width="50" height="50">
+                    <h3 class="job-name">
+                        Sales Execitive, Hire Purchase - Neonet S.A. — 2003 - 2006
+                    </h3>
+                </div>
                 <p class="description">Deputy Sales Director (2003-2004 PIGO, Olsztyn)
                     .</p>
             </div>
 
             <div>
-<div class="workicon"><img src="zagiel.png" alt="logo pelion" width="50" height="50">
-                <h3 class="job-name">
-                    Regional Hire Purchase Director - Żagiel S.A. — 1999 - 2002
-                </h3></div>
+                <div class="workicon"><img src="zagiel.png" alt="logo pelion" width="50" height="50">
+                    <h3 class="job-name">
+                        Regional Hire Purchase Director - Żagiel S.A. — 1999 - 2002
+                    </h3>
+                </div>
 
                 <p class="description">SKK Kredyt S.A., taken-over by Żagiel in 2002</p>
             </div>
@@ -197,7 +212,8 @@
 
                 <a class="contact-links" href="mailto:maciej.kociemski@gmail.com">agnieszka.kociemska@gmail.com</a>
 
-                <a class="contact-links" href="https://linkedin.com/in/agnieszkakociemska" target="_blank">linkedin.com/in/agnieszkakociemska
+                <a class="contact-links" href="https://linkedin.com/in/agnieszkakociemska"
+                    target="_blank">linkedin.com/in/agnieszkakociemska
                 </a>
 
 
